# galaxia-ananke

./: .gitignore  Makefile.in  README.md  configure  configure.ac
GalaxiaData/Examples/: fields.txt  myparameterfile
GalaxiaData/Isochrones/BolCorr/UBV/: interp_keys.txt
GalaxiaData/Isochrones/Chabrier/: interp_keys.txt
GalaxiaData/Isochrones/padova/APO__SDSS/: IsoFileDescriptor.txt
GalaxiaData/Isochrones/padova/CTIO__DECam/: IsoFileDescriptor.txt
GalaxiaData/Isochrones/padova/DCMC/: IsoFileDescriptor.txt
GalaxiaData/Isochrones/padova/DECAM/: IsoFileDescriptor.txt
GalaxiaData/Isochrones/padova/Euclid/: IsoFileDescriptor.txt
GalaxiaData/Isochrones/padova/GAIA/: IsoFileDescriptor.txt
GalaxiaData/Isochrones/padova/GAIA-TYCHO-2MASS/: IsoFileDescriptor.txt
GalaxiaData/Isochrones/padova/GAIADR2/: IsoFileDescriptor.txt
GalaxiaData/Isochrones/padova/GAIA__0/: IsoFileDescriptor.txt
GalaxiaData/Isochrones/padova/GAIA__0+TYCHO+2MASS/: IsoFileDescriptor.txt
GalaxiaData/Isochrones/padova/GAIA__DR2/: IsoFileDescriptor.txt
GalaxiaData/docs/: index.html
GalaxiaData/nbody1/filenames/: m81.txt
src/: BHTree.h  Functions.h  GInterpolator.h  Galaxia.cpp  Geometry.cpp  Interp.cpp  Interp.h  Isochrone.cpp  Isochrone.h  IsochroneBase.cpp  IsochroneBase.h  IsochroneDB.cpp  IsochroneDB.h  Makefile.am  Makefile.in  Parameters.cpp  Parameters.h  Population.cpp  Population.h  Sampler.cpp  Sampler.h  Satellite.cpp  Satellite.h  StarParticle.h  SurveyDesign.cpp  SurveyDesign.h  SurveyError.cpp  SurveyError.h  ebf.hpp  ebftable.cpp  newIMF_tests.cpp
(+17 files in other folders)
