bin_PROGRAMS=galaxia
galaxia_SOURCES=     Galaxia.cpp        Isochrone.cpp \
Satellite.cpp          TableInterpolator.cpp Cot.cpp Geometry.cpp \
IsochroneDB.cpp  Timer.cpp \
ebf.cpp        GInterpolator.cpp  Parameters.cpp   SurveyDesign.cpp \
ebftable.cpp   Interp.cpp         Population.cpp   SurveyError.cpp \
Functions.cpp  IsochroneBase.cpp  Sampler.cpp      sutils.cpp \
         Geometry.h       IsochroneDB.h  Population.h  \
StarParticle.h       sutils.h CompatibilityChecks.h  GInterpolator.h \
Isochrone.h    Sampler.h    TableInterpolator.h \
Cot.h                  Interp.h         Matrix.h       Satellite.h \
SurveyDesign.h       Timer.h Functions.h            IsochroneBase.h \
Parameters.h   SurveyError.h ebf.hpp  \
ebftable.hpp  ebfvector.hpp
AM_CPPFLAGS = -DCODEDATAPATH=\"$(datadir)/\"
